--- a/frontend/src/product/pages/Home.css
+++ b/frontend/src/product/pages/Home.css
@@ -1,3 +1,4 @@
 img {
-    width: 250px;
+    width: 200px;
+    border-radius: 20px;
 }
