--- a/frontend/src/user/pages/Account.css
+++ b/frontend/src/user/pages/Account.css
@@ -1,16 +1,15 @@
-
 .account-form {
     position: relative;
     list-style: none;
-    margin: 0 auto;
+    margin: 6.5rem auto;
     padding: 1rem;
     width: 90%;
     max-width: 40rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-    border-radius: 6px;
-    background: white;
+    border-radius: 8px;
+    background: #C1E899;
   }
-  
-  .account-form form {
-    margin-bottom: 1rem;
-  }
+
+.account-form button {
+  margin-bottom: 10px;
+}
